fix tab4 search text half overlap issue

--- a/src/app/tab4/tab4.page.scss
+++ b/src/app/tab4/tab4.page.scss
@@ -161,3 +161,7 @@
         color:white;
     }
 }
+
+ion-content.custom-content {
+  --offset-top: 64px !important;
+}
