--- a/src/global.scss
+++ b/src/global.scss
@@ -137,5 +137,5 @@ app-card-balloon {
 }
   
 .shrink-card {
-    transform: scale(0.95);
+    transform: scale(0.98);
 }
